// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Formatted Address should not render without address 1`] = `
<div>
  <div
    class="w-full flex items-center no-ligatures overflow-hidden whitespace-nowrap"
  />
</div>
`;

exports[`Formatted Address should render address only 1`] = `
<div>
  <div
    class="w-full flex items-center no-ligatures overflow-hidden whitespace-nowrap"
  >
    <span
      class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-text font-semibold text-base"
      data-testid="address__wallet-address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with normal font 1`] = `
<div>
  <div
    class="w-full flex items-center no-ligatures overflow-hidden whitespace-nowrap"
  >
    <span
      class="max-w-24 truncate mr-2 font-normal text-base text-theme-text"
      data-testid="address__wallet-name"
    >
      <span
        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-secondary-500 dark:text-theme-secondary-700 font-normal text-base"
      data-testid="address__wallet-address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;

exports[`Formatted Address should render with wallet name 1`] = `
<div>
  <div
    class="w-full flex items-center no-ligatures overflow-hidden whitespace-nowrap"
  >
    <span
      class="max-w-24 truncate mr-2 font-semibold text-base text-theme-text"
      data-testid="address__wallet-name"
    >
      <span
        class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
        data-testid="TruncateEnd"
      >
        Sample Wallet
      </span>
    </span>
    <span
      class="TruncateMiddle__Wrapper-sc-3j3e79-0 whitespace-nowrap text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
      data-testid="address__wallet-address"
    >
      ASuusXSW9kfWnicScSgUTjttP6T9GQ3kqT
    </span>
  </div>
</div>
`;
